@@ -3,6 +3,7 @@ It would not be what it is today without the invaluable help of these
 people:
 
 "Markus F.X.J. Oberhumer" <k3040e4@wildsau.idv-edu.uni-linz.ac.at>
+"Paul D. Smith" <psmith@BayNetworks.COM>
 Akim Demaille <demaille@inf.enst.fr>
 Alexander V. Lukyanov <lav@yars.free.net>
 Alexandre Oliva <oliva@dcc.unicamp.br>
